--- a/templates/base/header.tmpl
+++ b/templates/base/header.tmpl
@@ -40,7 +40,7 @@
       <div class="col-sm-4">
         <div class="float-right">
           <button type="button" class="btn btn-info btn-sm" data-bind="click: fetchData">Get Data</button>
-          <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#someData">Button 2</button>
+          <button type="button" class="btn btn-info btn-sm" data-bind="click: postData">POST data</button>
           <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#someData">Button 3</button>
         </div>
       </div>
